@@ -30,35 +30,29 @@ o On Windows use CryptGenRandom() to get random seed for arc4random.
 o library add convenience functions for A, AAAA, PTR, getaddrinfo, libresolve.
 o library add function to validate input from app that is signed.
 o add dynamic-update requests (making a dynupd request) to libunbound api.
-o in an ipv6 connected only environment unbound cannot use outgoing IP6 
-  to send to ip4to6 mapped hosts, need ip4to6map of NS and disable 
-  V6ONLY socket option.
 o SIG(0) and TSIG.
 o support OPT record placement on recv anywhere in the additional section. 
 o add local-file: config with authority features.
 o (option) to make local-data answers be secure for libunbound (default=no)
 o (option) to make chroot: copy all needed files into jail (or make jail)
 	perhaps also print reminder to link /dev/random and sysloghack.
+o overhaul outside-network servicedquery to merge with udpwait and tcpwait,
+  to make timers in servicedquery independent of udpwait queues.
+o 0x20 fallback so it can be enabled without trouble.
+o check into rebinding ports for efficiency, configure time test.
+o EVP hardware crypto support.
+
+Features soon after 1.0.
+o zone name appending for local-data. Perhaps read zonefiles. Perhaps it is
+  too much authority feature creep.
+o on windows version, implement that OS ancillary data capabilities for
+  interface-automatic. IPPKTINFO, IP6PKTINFO for WSARecvMsg, WSASendMsg.
 o (option) for extended statistics. If enabled (not by default) collect print
 	rcode, uptime, spoofnearmisses, cache size, qtype, 
 	bits(RD, CD, DO, EDNS-present, AD)query, (Secure, Bogus)reply.
 	perhaps also see which slow auth servers cause >1sec values.
 	stats-file possible with key: value or key=value lines in it.
 	stats on SIGUSR1. addup stats over threads.
-o overhaul outside-network servicedquery to merge with udpwait and tcpwait,
-  to make timers in servicedquery independent of udpwait queues.
-o 0x20 fallback so it can be enabled without trouble.
-o check into rebinding ports for efficiency, configure time test.
-o DLV is considered.
-o EVP hardware crypto support.
-
-Features soon after 1.0.
-o zone name appending for local-data. Perhaps read zonefiles. Perhaps it is
-  too much authority feature creep.
-o on windows version, libunbound uses a NamedPipe, examine security status
-  make sure the OS makes it safe like on unix.
-o on windows version, implement that OS ancillary data capabilities for
-  interface-automatic. IPPKTINFO, IP6PKTINFO for WSARecvMsg, WSASendMsg.
 
 For 1.x; features that have been requested during the beta test.
 o command channel for couple of tasks. Like rndc. unbound-control
