@@ -2,6 +2,7 @@
 	- iana port update. 
 	- TODO update.
 	- fix bug 201: null ptr deref on cleanup while udp pkts wait for port.
+	- added explanatory text for outgoing-port-permit in manpage.
 
 30 July 2008: Wouter
 	- fixup bug qtype DS for unsigned zone and signed parent validation.
